Fix tooltip flickering issue

--- a/css/chata-styles.css
+++ b/css/chata-styles.css
@@ -1317,12 +1317,12 @@ text.autoql-vanilla-x-axis-label, text.autoql-vanilla-y-axis-label {
 }
 
 .tooltip-hide{
-    display: none;
+    /* display: none; */
     visibility: hidden;
 }
 
 .tooltip-show{
-    display: block;
+    /* display: block; */
     visibility: visible;
 }
 
